Even more test case changes made by Holly

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/VerifyAllThingsSearchable.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/VerifyAllThingsSearchable.html
@@ -46,6 +46,11 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=people</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=activities</td>
 	<td></td>
 </tr>
@@ -171,22 +176,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Primate Health Talks</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Primate Health Talks Seminar Series</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Primate College of America</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate College of America College</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Primate Health Talks</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Primate Health Talks Seminar Series</td>
 	<td></td>
 </tr>
 <tr>
@@ -231,22 +236,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Primate University of America</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Primate University of America University</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Primate Health and Fitness</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate Health and Fitness Invited Talk</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Primate University of America</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Primate University of America University</td>
 	<td></td>
 </tr>
 <tr>
@@ -271,22 +276,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Primate Heart Health</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Primate Heart Health Service</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Primate Health Conference</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate Health Conference Conference</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Primate Heart Health</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Primate Heart Health Service</td>
 	<td></td>
 </tr>
 <tr>
@@ -301,22 +306,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Best Primate College</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Best Primate College Award or Honor</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=New Primate Students</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>New Primate Students Workshop</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Best Primate College</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Best Primate College Award or Honor</td>
 	<td></td>
 </tr>
 <tr>
@@ -335,6 +340,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertTitle</td>
+	<td>primates - VIVO Search Results</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Primate Memorial Building</td>
 	<td></td>
@@ -345,8 +355,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>primates - VIVO Search Results</td>
+	<td>verifyElementPresent</td>
+	<td>link=Primate Survival Planning Grant</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Primate Survival Planning Grant Grant</td>
 	<td></td>
 </tr>
 <tr>
@@ -357,16 +372,6 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate Student of the Year Award or Honor</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=Primate Survival Planning Grant</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Primate Survival Planning Grant Grant</td>
 	<td></td>
 </tr>
 <tr>
@@ -421,6 +426,16 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=Jane Memorial Building</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[9]/span</td>
+	<td>Building</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=exact:http://primatehealthintro.cornell.edu</td>
 	<td></td>
 </tr>
@@ -441,6 +456,16 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=Person, Polly</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[12]/span</td>
+	<td>Person</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=Gorilla Moving Company</td>
 	<td></td>
 </tr>
@@ -458,6 +483,16 @@
 	<td>verifyTextPresent</td>
 	<td>PHC Proceedings Proceedings</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=State Fair Park</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[15]/span</td>
+	<td>Facility</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
