--- a/utilities/acceptance-tests/suites/CreatePeople/SearchPeople.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/SearchPeople.html
@@ -78,6 +78,16 @@
 	<td>Faculty, Jane Assistant Professor</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Librarian, Lily Lou</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>Assistant Librarian</td>
+</tr>
 <!--Search for Jane Faculty's full name-->
 <tr>
 	<td>type</td>
