--- a/utilities/acceptance-tests/suites/CreatePeople/TestUnicodeName.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/TestUnicodeName.html
@@ -125,7 +125,7 @@
 	<td>submit</td>
 	<td></td>
 </tr>
-<!--Verify that Jane Faculty was created-->
+<!--Verify that faculty member was created-->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Marienkäfer, Mary</td>
