--- a/utilities/acceptance-tests/suites/CreatePeople/SearchFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/SearchFacultyInfo.html
@@ -188,22 +188,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Primate Feeding</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Primate Feeding Concept</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Primate Reactions</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate Reactions Case Study</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Primate Feeding</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Primate Feeding Concept</td>
 	<td></td>
 </tr>
 <tr>
@@ -218,22 +218,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Licensed Primate Expert</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Licensed Primate Expert License</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Licensed Primate Instructor</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Licensed Primate Instructor License</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Licensed Primate Expert</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Licensed Primate Expert License</td>
 	<td></td>
 </tr>
 <tr>
@@ -294,6 +294,11 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=people</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=research</td>
 	<td></td>
 </tr>
@@ -305,6 +310,16 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Chimp Lover for Life Award or Honor</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Faculty, Jane</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Faculty, Jane Assistant Professor</td>
 	<td></td>
 </tr>
 <!--Search for TARZAN-->
@@ -443,22 +458,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=JF Feeding</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>JF Feeding Technique</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
 	<td>link=Primate Feeding</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Primate Feeding Training Service</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=JF Feeding</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>JF Feeding Technique</td>
 	<td></td>
 </tr>
 <tr>
