Additional test case changes by Holly.

--- a/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckMapOfScience/AddPublications.html
@@ -1174,6 +1174,67 @@
 	<td>link=Dying for a Drink</td>
 	<td></td>
 </tr>
+<!--Rebuild Visualization Cache-->
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Site Admin</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Rebuild visualization cache</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Visualization Tools</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Refresh Cached Models for Visualization</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Regenerate Constructed Models</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Index</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Index of Contents</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Faculty Member</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Faculty Member</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Furter, Frank</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Furter, Frank</td>
+	<td></td>
+</tr>
 <!--Check Map of Science-->
 <tr>
 	<td>clickAndWait</td>
