--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
@@ -587,7 +587,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>4&nbsp;&nbsp;&nbsp;Publication(s)</td>
+	<td>4&nbsp;&nbsp;&nbsp;Publications through today's date</td>
 	<td></td>
 </tr>
 <tr>
@@ -597,12 +597,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>2001&nbsp;&nbsp;First Publication</td>
+	<td>2001&nbsp;&nbsp;First publication</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>2009&nbsp;&nbsp;&nbsp;Last Publication</td>
+	<td>2009&nbsp;&nbsp;&nbsp;Last publication</td>
 	<td></td>
 </tr>
 <tr>
@@ -612,7 +612,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>from 2001 to 2014</td>
+	<td>from 2001 - 2014</td>
 	<td></td>
 </tr>
 <tr>
@@ -627,7 +627,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>from 2001 to 2014</td>
+	<td>from 2001 - 2014</td>
 	<td></td>
 </tr>
 <tr>
