--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
@@ -796,11 +796,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>years (4 total)</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Co-author Network</td>
 	<td></td>
@@ -836,18 +831,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>selectWindow</td>
-	<td>null</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=GraphML file</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>4&nbsp;&nbsp;&nbsp;Publication(s)</td>
+	<td>4&nbsp;&nbsp;&nbsp;Publications through today's date</td>
 	<td></td>
 </tr>
 <tr>
@@ -857,12 +847,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>2001&nbsp;&nbsp;First Publication</td>
+	<td>2001&nbsp;&nbsp;First publication</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>2009&nbsp;&nbsp;&nbsp;Last Publication</td>
+	<td>2009&nbsp;&nbsp;&nbsp;Last publication</td>
 	<td></td>
 </tr>
 <tr>
@@ -872,7 +862,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>from 2001 to 2014</td>
+	<td>from 2001 - 2014</td>
 	<td></td>
 </tr>
 <tr>
@@ -887,7 +877,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>from 2005 to 2014</td>
+	<td>from 2005 - 2014</td>
 	<td></td>
 </tr>
 <tr>
