Holly made a few test case changes.

--- a/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
+++ b/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
@@ -293,8 +293,13 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[6]</td>
-	<td>Librarian, Lily Associate Librarian ... Show Me the Primates! ...</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[6]/span</td>
+	<td>Associate Librarian</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
+	<td>Assistant Professor</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -324,6 +329,11 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Librarian, Lily</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Faculty, Jane</td>
 	<td></td>
 </tr>
 <!--Verify search results for LIBRARIAN-->
@@ -369,6 +379,11 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
+	<td>link=Researching Primates</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
 	<td>link=Show Me the Primates!</td>
 	<td></td>
 </tr>
@@ -385,6 +400,11 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Amercian Library Association</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Animal Librarianship</td>
 	<td></td>
 </tr>
 <tr>
@@ -405,22 +425,32 @@
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
-	<td>Association</td>
+	<td>Presentation</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[5]/span</td>
-	<td>Museum</td>
+	<td>Association</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[6]/span</td>
-	<td>College</td>
+	<td>Museum</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
+	<td>College</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[8]/span</td>
 	<td>Association</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[9]/span</td>
+	<td>Invited Talk</td>
 </tr>
 <!--Verify search results for ANIMAL-->
 <tr>
@@ -436,6 +466,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Search results for 'animal'</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=people</td>
 	<td></td>
 </tr>
 <tr>
@@ -461,6 +496,16 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=USAIN Conference</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
+	<td>Associate Librarian</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Librarian, Lily</td>
 	<td></td>
 </tr>
 <!--Verify search results for CARROLL-->
