--- a/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
+++ b/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
@@ -303,12 +303,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-tc1</td>
+	<td>Version rel-1.8-rc1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-tc1</td>
+	<td>link=rel-1.8-rc1</td>
 	<td></td>
 </tr>
 <tr>
@@ -532,7 +532,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-tc1</td>
+	<td>Version rel-1.8-rc1</td>
 	<td></td>
 </tr>
 <!--Set site information back to default-->
@@ -639,12 +639,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-tc1</td>
+	<td>Version rel-1.8-rc1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-tc1</td>
+	<td>link=rel-1.8-rc1</td>
 	<td></td>
 </tr>
 <!--Logout-->
