--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
@@ -517,7 +517,47 @@
 	<td>submit</td>
 	<td></td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>xpath=(//img[@alt='add'])[11]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Edit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=typeSelector</td>
+	<td>label=Performance</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=activity</td>
+	<td>Apes on Parade</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=startField-year</td>
+	<td>1991</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Faculty, Jane</td>
+	<td></td>
+</tr>
 <!--Add Publications tab fields-->
+<tr>
+	<td>click</td>
+	<td>css=li.nonSelectedGroupTab.clickable</td>
+	<td></td>
+</tr>
 <tr>
 	<td>click</td>
 	<td>//div[@id='wrapper-content']/ul/li[4]</td>
@@ -556,41 +596,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Faculty, Jane</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[11]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>id=typeSelector</td>
-	<td>label=Performance</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=activity</td>
-	<td>Apes on Parade</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=startField-year</td>
-	<td>1991</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=submit</td>
 	<td></td>
 </tr>
 <tr>
