First batch of RC2 test case changes by Holly

--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
@@ -237,8 +237,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertTitle</td>
+	<td>Faculty, Jane</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[37]</td>
+	<td>xpath=(//img[@alt='add'])[36]</td>
 	<td></td>
 </tr>
 <tr>
@@ -288,7 +293,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[42]</td>
+	<td>xpath=(//img[@alt='add'])[41]</td>
 	<td></td>
 </tr>
 <tr>
