Holly made some more test case changes related to RC2

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
@@ -612,7 +612,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[19]</td>
+	<td>xpath=(//h3[@id='RO_0001025']/a)[2]</td>
 	<td></td>
 </tr>
 <tr>
