--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>If you don't find the appropriate entry on the selection list above:</td>
+	<td>There are no entries in the system from which to select. </td>
 	<td></td>
 </tr>
 <tr>
