--- a/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
+++ b/utilities/acceptance-tests/suites/AddRoles/VerifyAllRolesSearchable.html
@@ -292,13 +292,18 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[6]/span</td>
-	<td>Associate Librarian</td>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
+	<td>Associate Librarian</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[@id='wrapper-content']/div/ul/li[8]/span</td>
 	<td>Assistant Professor</td>
 </tr>
 <tr>
