--- a/utilities/acceptance-tests/suites/CustomEducationForm/ChangeEducationBackground.html
+++ b/utilities/acceptance-tests/suites/CustomEducationForm/ChangeEducationBackground.html
@@ -92,14 +92,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Department 1998 - 2000</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, Graduate School Fellowship 2002 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <!--Change department, year, and supplemental info for B.S. degree-->
 <tr>
@@ -169,24 +169,24 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College, Business Department, Four year full scholarship 1981</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , Graduate School Fellowship 2002 -</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Department 1998 - 2000</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, Graduate School Fellowship 2002 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <!--Change department for M.B.A. degree-->
 <tr>
 	<td>clickAndWait</td>
-	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]/a[2]</td>
+	<td>xpath=(//img[@alt='edit this entry'])[4]</td>
 	<td></td>
 </tr>
 <tr>
@@ -236,19 +236,19 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College, Business Department, Four year full scholarship 1981</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , Graduate School Fellowship 2002 -</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Administration Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Administration Department 1998 - 2000</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, Graduate School Fellowship 2002 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <!--Change M.Ed. to add department and delete supplemental info-->
 <tr>
@@ -308,19 +308,19 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College, Business Department, Four year full scholarship 1981</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , School of Business 2002 -</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Administration Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Administration Department 1998 - 2000</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, School of Business 2002 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <!--Log out-->
 <tr>
