--- a/utilities/acceptance-tests/suites/CustomEducationForm/CheckPublicView.html
+++ b/utilities/acceptance-tests/suites/CustomEducationForm/CheckPublicView.html
@@ -66,19 +66,24 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, School of Business 2002 -</td>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Administration Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , School of Business 2002 -</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College, Business Department, Four year full scholarship 1981</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Administration Department 1998 - 2000</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
