Final test case changes from RC2.

--- a/utilities/acceptance-tests/suites/SearchTextDiscovery/TextDiscovery.html
+++ b/utilities/acceptance-tests/suites/SearchTextDiscovery/TextDiscovery.html
@@ -1183,28 +1183,23 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=9900editLink</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForElementPresent</td>
-	<td>tinymce</td>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>tinymce</td>
+	<td>name=Name</td>
 	<td>Lemuria</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=9900okLink</td>
-	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>id=primaryAction</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Individual Control Panel</td>
 	<td></td>
 </tr>
 <tr>
@@ -1361,11 +1356,6 @@
 	<td>Department</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>css=strong</td>
-	<td>Baker</td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Thoughts</td>
 	<td></td>
@@ -1374,11 +1364,6 @@
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
 	<td>Academic Article</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/p/strong</td>
-	<td>Baker</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -1390,17 +1375,7 @@
 	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
 	<td>Continent</td>
 </tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[4]/p</td>
-	<td>... Baker, Able ...</td>
-</tr>
 <!--Change label on object through context node: role...-->
-<tr>
-	<td>selectWindow</td>
-	<td>null</td>
-	<td></td>
-</tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Advanced Tinkering</td>
@@ -1432,24 +1407,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=9903editLink</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForElementPresent</td>
-	<td>tinymce</td>
-	<td></td>
-</tr>
-<tr>
 	<td>type</td>
-	<td>tinymce</td>
+	<td>name=Name</td>
 	<td>Advanced Puttering</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=9903okLink</td>
-	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1543,11 +1503,6 @@
 	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
 	<td>Honcho</td>
 </tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/p</td>
-	<td>... Advanced Puttering ...</td>
-</tr>
 <!--...then search for baker-->
 <tr>
 	<td>type</td>
@@ -1610,11 +1565,6 @@
 	<td>Academic Article</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/p</td>
-	<td>... Baker, Able ...</td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Advanced Puttering</td>
 	<td></td>
@@ -1625,11 +1575,6 @@
 	<td>Department</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/p</td>
-	<td>... Baker, Able ...</td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Lemuria</td>
 	<td></td>
@@ -1638,11 +1583,6 @@
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
 	<td>Continent</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[4]/p/strong</td>
-	<td>Baker</td>
 </tr>
 <!--Change label on object through standard contect node...-->
 <tr>
@@ -1676,24 +1616,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=9915editLink</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForElementPresent</td>
-	<td>tinymce</td>
-	<td></td>
-</tr>
-<tr>
 	<td>type</td>
-	<td>tinymce</td>
+	<td>name=Name</td>
 	<td>Musings</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=9915okLink</td>
-	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1787,11 +1712,6 @@
 	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
 	<td>Honcho</td>
 </tr>
-<tr>
-	<td>verifyText</td>
-	<td>css=strong</td>
-	<td>Musings</td>
-</tr>
 <!--...then search for baker-->
 <tr>
 	<td>type</td>
@@ -1854,11 +1774,6 @@
 	<td>Department</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>css=strong</td>
-	<td>Baker</td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Musings</td>
 	<td></td>
@@ -1869,11 +1784,6 @@
 	<td>Academic Article</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/p</td>
-	<td>... Baker, Able ...</td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Lemuria</td>
 	<td></td>
@@ -1882,11 +1792,6 @@
 	<td>verifyText</td>
 	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
 	<td>Continent</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[4]/p</td>
-	<td>... Baker, Able ...</td>
 </tr>
 <!--Log out-->
 <tr>
