Changes to test cases based on RC2 testing--Holly

--- a/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
+++ b/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
@@ -302,13 +302,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-rc2</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-rc2</td>
+	<td>link=rel-1.8-rc3</td>
 	<td></td>
 </tr>
 <tr>
@@ -531,8 +526,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-rc2</td>
+	<td>verifyElementPresent</td>
+	<td>link=rel-1.8-rc3</td>
 	<td></td>
 </tr>
 <!--Set site information back to default-->
@@ -638,13 +633,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Version rel-1.8-rc2</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-rc2</td>
+	<td>link=rel-1.8-rc3</td>
 	<td></td>
 </tr>
 <!--Logout-->
