--- a/utilities/acceptance-tests/suites/LinkedOpenData/TestVariousRequests.html
+++ b/utilities/acceptance-tests/suites/LinkedOpenData/TestVariousRequests.html
@@ -1145,7 +1145,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//div[4]</td>
-	<td>MIME type is text/html</td>
+	<td>MIME type is application/rdf+xml</td>
 </tr>
 <tr>
 	<td>verifyText</td>
