--- a/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
+++ b/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
@@ -273,7 +273,7 @@
 	<td>Removed RDF from file BoostIndividual.txt. Removed 1 statements.</td>
 	<td></td>
 </tr>
-<!--Make sure search is back to normal-->
+<!--Make sure search is back to normal--as of 1.8 this means at the end-->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Index</td>
