Holly made some more changes to test cases due to RC2.

--- a/utilities/acceptance-tests/suites/AddPublications/DeleteValidationStuff.html
+++ b/utilities/acceptance-tests/suites/AddPublications/DeleteValidationStuff.html
@@ -1153,6 +1153,16 @@
 	<td>10000</td>
 	<td></td>
 </tr>
+<tr>
+	<td>refreshAndWait</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>refreshAndWait</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <!--Verify everything is gone-->
 <tr>
 	<td>verifyTextNotPresent</td>
