--- a/utilities/acceptance-tests/suites/CustomEducationForm/ChangeEducationBackground.html
+++ b/utilities/acceptance-tests/suites/CustomEducationForm/ChangeEducationBackground.html
@@ -87,9 +87,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College 1980</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , Graduate School Fellowship 2002 -</td>
 </tr>
 <tr>
 	<td>verifyText</td>
@@ -99,7 +99,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
-	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
+	<td>B.S. in Business Administration, Carroll College 1980</td>
 </tr>
 <!--Change department, year, and supplemental info for B.S. degree-->
 <tr>
