--- a/utilities/acceptance-tests/suites/CustomEducationForm/DeleteEducationalBackground.html
+++ b/utilities/acceptance-tests/suites/CustomEducationForm/DeleteEducationalBackground.html
@@ -92,19 +92,19 @@
 </tr>
 <!--Verify the education to be deleted does indeed exist-->
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.Ed. in Business Education, University of Wisconsin, School of Business 2002 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000056-EducationalProcess-List &gt; li</td>
+	<td>M.Ed. in Business Education, University of Wisconsin , School of Business 2002 -</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>M.B.A. in Business Administration, Carroll University, Business Administration Department 1998 - 2000</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[2]</td>
+	<td>M.B.A. in Business Administration, Carroll University , Business Administration Department 1998 - 2000</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>B.S. in Business Administration, Carroll College, Business Department, Four year full scholarship 1981</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//ul[@id='RO_0000056-EducationalProcess-List']/li[3]</td>
+	<td>B.S. in Business Administration, Carroll College , Business Department, Four year full scholarship 1981</td>
 </tr>
 <!--Delete degrees-->
 <tr>
