Holly made a few test case changes for RC4.

--- a/utilities/acceptance-tests/suites/CheckVisualizations/CheckGrantDates.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/CheckGrantDates.html
@@ -664,9 +664,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Nix Nintendo? 2011 -</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>css=#RO_0000053-InvestigatorRole-List &gt; li</td>
+	<td>exact:Nix Nintendo? 2010 -</td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
