Fixes to Selenium tests

--- a/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
+++ b/utilities/acceptance-tests/suites/InitialSetup/EditSiteInfo.html
@@ -45,7 +45,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Browse or search information on people, departments, courses, grants, and grants.</td>
+	<td>Browse or search information on people, departments, courses, grants, and publications.</td>
 	<td></td>
 </tr>
 <tr>
@@ -208,7 +208,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Browse or search information on people, departments, courses, grants, and grants.</td>
+	<td>Browse or search information on people, departments, courses, grants, and publications.</td>
 	<td></td>
 </tr>
 <tr>
@@ -299,11 +299,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=VIVO</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-rc4</td>
 	<td></td>
 </tr>
 <tr>
@@ -525,11 +520,6 @@
 	<td>link=VIVO</td>
 	<td></td>
 </tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-rc4</td>
-	<td></td>
-</tr>
 <!--Set site information back to default-->
 <tr>
 	<td>clickAndWait</td>
@@ -630,11 +620,6 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=VIVO</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=rel-1.8-rc4</td>
 	<td></td>
 </tr>
 <!--Logout-->
