--- a/utilities/acceptance-tests/suites/CheckMapOfScience/AddTestFaculty.html
+++ b/utilities/acceptance-tests/suites/CheckMapOfScience/AddTestFaculty.html
@@ -153,6 +153,11 @@
 	<td>Associate Professor</td>
 	<td></td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <!--Verify Co Networks not showing-->
 <tr>
 	<td>clickAndWait</td>
