Fixes to Selenium tests (indexing pause)

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
@@ -229,6 +229,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Index</td>
 	<td></td>
